# fuzzy-tree

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  RELEASE.md  shortcuts.zsh
src/: args.rs  config.rs  main.rs  path.rs  tree.rs  tui.rs  utils.rs
