[package]
name = "fuzzy-tree"
version = "0.1.2"
authors = ["Lewis Belcher <belcher_lewis@protonmail.com>"]
edition = "2018"
description = "A simple fuzzy finder written in Rust which displays results in an interactive tree format."
license = "MIT"
keywords = ["find", "interactive", "tree"]
categories = ["command-line-utilities", "filesystem"]
homepage = "https://gitlab.com/lewisbelcher/fuzzy-tree"
respoitory = "https://gitlab.com/lewisbelcher/fuzzy-tree"
readme = "README.md"

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
lazy_static = "1.4"
log = "0.4"
termion = "1.5.5"
which = "3.1.1"

[[bin]]
name = "fztree"
path = "src/main.rs"
